# pyap

./: .flake8  .gitignore  .yamllint  AUTHORS.rst  LICENSE  README.rst  pyproject.toml  setup.py  test_parser.py  test_parser_ca.py  test_parser_gb.py  test_parser_us.py  test_regexp.py  tox.ini
.github/workflows/: qa.yml
pyap/: __init__.py  address.py  api.py  exceptions.py  parser.py  utils.py
pyap/source_CA/: data.py
pyap/source_GB/: data.py
pyap/source_UK/: data.py
pyap/source_US/: data.py
tests/: test_parser.py  test_parser_ca.py  test_parser_gb.py  test_parser_us.py
